MC-1263: Buttons of Image Content Block are not aligned correctly
- Updated implementation to work with all responsive cases

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/image/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/image/_default.less
@@ -11,41 +11,6 @@
     border: 1px solid transparent;
     width: 100%;
 
-    .column-width-40 &,
-    .column-width-30 &,
-    .column-width-20 &,
-    .column-width-10 & {
-        .file-uploader-area {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            position: relative;
-
-            > span {
-                display: none;
-            }
-        }
-        .image-upload-instructions {
-            margin-bottom: 5px;
-        }
-        .file-uploader-button {
-            display: block;
-            margin-left: 0;
-            margin-right: 0;
-            margin-top: 15px;
-            max-width: 180px;
-            width: 100%;
-        }
-    }
-    .column-width-10 & {
-        .file-uploader-button {
-            padding: .6rem 0;
-        }
-        .image-upload-requirements {
-            display: none;
-        }
-    }
-
     figure {
         box-sizing: border-box;
         margin: 0;
